# RAG_Server

./: README.md  main.py  pyproject.toml  rag_service.py
data/: faiss.index  metadata.json
