[project]
name = "rag-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "dashscope>=1.25.17",
    "faiss-cpu>=1.13.2",
    "jieba>=0.42.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=1.1.9",
    "pypdf>=6.10.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
]
